--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -37,15 +37,12 @@
 
 
 	<!-- hitwebcounter Code START -->
-	<a href="http://www.hitwebcounter.com/links.php" target="_blank">
+	<a href="http://www.hitwebcounter.com/links.php" target="_blank" class="divcss5-right">
 	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" >
 	</a><br/>
-	<!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="Web Meter" 
-	target="_blank" style="font-family: Geneva, Arial, Helvetica; 
-	font-size: 8px; color: #9F9F97; text-decoration: underline ;"><code>Web Meter</code>
-	</a>   
-
 	
+
+
 	<div class="body" role="main">
 		<div class="unit-body">
 			<div class="unit-inner unit-body-inner">
