--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -38,11 +38,10 @@
 
 	<!-- hitwebcounter Code START -->
 	<a href="http://www.hitwebcounter.com/links.php" target="_blank" class="divcss5-right">
-	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" >
-	</a><br/>
+	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" class="divcss5-right">
+	</a>
+	<!--<br/>空行-->
 	
-
-
 	<div class="body" role="main">
 		<div class="unit-body">
 			<div class="unit-inner unit-body-inner">
