--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -38,8 +38,8 @@
 
 	<!-- hitwebcounter Code START -->
 	<div class="divcss5-right">
-	<a href="http://www.hitwebcounter.com/links.php" target="_blank" class="divcss5-right">
-	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" class="divcss5-right">
+	<a href="http://www.hitwebcounter.com/links.php" target="_blank" align="right">
+	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" align="right">
 	</a>
 	</div>
 	<!--<br/>空行-->
