--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -36,7 +36,7 @@
 	</header>
 
 
-	<!-- hitwebcounter Code START -->
+	<!-- hitwebcounter Code START 添加的访问计数器-->
 	<div class="divcss5-right">
 	<a href="http://www.hitwebcounter.com/links.php" target="_blank" align="right">
 	<img src="http://hitwebcounter.com/counter/counter.php?page=5330479&style=0007&nbdigits=5&type=page&initCount=3000" title="http://www.hitwebcounter.com/links.php" Alt="http://www.hitwebcounter.com/links.php"   border="0" align="right">
@@ -53,6 +53,11 @@
 			</div><!-- unit-inner -->
 		</div><!-- unit-body -->
 	</div><!-- body -->
+
+	<!-- 加入微博模块 -->
+	<iframe width ="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=zh_cn&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=1&isTitle=1&noborder=0&isWeibo=0&isFans=0&uid=1352190133&verifier=6eb0bc27&dpc=1"></iframe>
+
+
 	<footer class="the-footer">
 		<div class="unit-foot">
 			<div class="unit-inner unit-foot-inner">
