--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -44,17 +44,27 @@
 	</div>
 	<!--<br/>空行-->
 	
+	<section>
+	<h4>Recent Posts</h4>
+	<ul id="recent_posts">{ % for rpost in site.posts limit: 15 %}
+	<li class="post">
+	<a href=""></a>
+	</li>{ % endfor %}
+	</ul>
+	</section>
+
 	<div class="body" role="main">
 		<div class="unit-body">
 			<div class="unit-inner unit-body-inner">
 				<div class="entry-content">
 					{{ content }}
-					<!-- 加入微博模块 -->
-	<iframe width ="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=zh_cn&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=1&isTitle=1&noborder=0&isWeibo=0&isFans=0&uid=1352190133&verifier=6eb0bc27&dpc=1"></iframe>
 				</div>
 			</div><!-- unit-inner -->
 		</div><!-- unit-body -->
 	</div><!-- body -->
+
+	<!-- 加入微博模块 -->
+	<iframe width ="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=zh_cn&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=1&isTitle=1&noborder=0&isWeibo=0&isFans=0&uid=1352190133&verifier=6eb0bc27&dpc=1"></iframe>
 
 	<footer class="the-footer">
 		<div class="unit-foot">
