--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -43,7 +43,7 @@
           <h4>about</h4>
           <ul>
             {% if site.author.email %}
-            <li class="contact"><address><span class="fn email">{{ site.author.email }}</span></address></li>
+            <h4>{{ site.author.email }}</h4>
             {% endif %}
             {% if site.author.github %}
             <li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github</a></li>
