恢复微博位置 添加计数插件

--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -39,8 +39,6 @@
         </div>
         {% endif %}
 
-        <iframe width="100%" height="100" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=0&speed=0&skin=1&isTitle=1&noborder=0&isWeibo=0&isFans=0&uid=1352190133&verifier=6eb0bc27&dpc=1"></iframe>
-
         {% if site.author %}
         <div class="misc vcard">
           <h4>about</h4>
@@ -76,7 +74,10 @@
       </section>
 
       <footer>
-      
+
+      <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            <span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span>
+
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
