--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -76,7 +76,7 @@
       <footer>
 
       <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            <span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span>
+            <span id="busuanzi_container_site_pv">+3000<span id="busuanzi_value_site_pv"></span></span>
 
       </footer>
     </div>
